WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46984
[Qt] Segmentation fault during zoom out
https://bugs.webkit.org/show_bug.cgi?id=46984
Summary
[Qt] Segmentation fault during zoom out
Ragner Magalhaes
Reported
2010-10-01 08:44:31 PDT
When you just do zoom out (more or less 5x) the program receives a Segmentation fault.
Attachments
Patch 01
(1.91 KB, patch)
2010-10-01 09:09 PDT
,
Ragner Magalhaes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ragner Magalhaes
Comment 1
2010-10-01 09:09:32 PDT
Created
attachment 69471
[details]
Patch 01 The program was receiving segfault when "middle > checkerSize" on QtMobileWebStyle::drawChecker, this patch just adjust checkerSize to be greater than or equals to middle.
Ragner Magalhaes
Comment 2
2010-10-01 09:17:41 PDT
To receive segfault the web page should have a checkbox checked ....
WebKit Commit Bot
Comment 3
2010-10-01 17:24:18 PDT
Comment on
attachment 69471
[details]
Patch 01 Clearing flags on attachment: 69471 Committed
r68959
: <
http://trac.webkit.org/changeset/68959
>
WebKit Commit Bot
Comment 4
2010-10-01 17:24:23 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 5
2010-10-06 07:06:13 PDT
Revision
r68959
cherry-picked into qtwebkit-2.1 with commit 1d5ee2c <
http://gitorious.org/webkit/qtwebkit/commit/1d5ee2c
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug