2010-10-01  Ragner Magalhaes  <ragner.magalhaes@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Segmentation fault during zoom out
        https://bugs.webkit.org/show_bug.cgi?id=46984

        * platform/qt/QtMobileWebStyle.cpp:
        (QtMobileWebStyle::drawChecker): Adjust checkerSize to be greater than or equals to middle.

Canonical link: https://commits.webkit.org/59572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68959 268f45cc-cd09-0410-ab3c-d52691b4dbfc